@@ -44,6 +44,9 @@
           <para>[bdubbs] - Add patch to fix Flex regression test
           failures.</para>
         </listitem>
+        <listitem>
+          <para>[ken] - Fix how the timezones are installed.</para>
+        </listitem>
       </itemizedlist>
     </listitem>
 
