@@ -1,3 +1,8 @@
+2012-06-13	Ken Moffat <ken@linuxfromscratch.org>
+	* add rule_generator/: with persistent net and cd alias rules
+	  and functions which were removed from udev-182 after it was merged
+	  into systemd.
+
 2010-01-26	Matt Burgess <matthew@linuxfromscratch.org>
 	* 55-lfs.rules: Remove lots of rules that have been merged upstream.
 	* 61-cdrom.rules: Remove as upstream has a replacement.
